fix(twitch): Make text on offline screen readable (#257)
* Update follow panel colors

* Bump version

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.14
+@version        1.1.15
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -229,6 +229,16 @@
 
     a.offline-recommendations-video-card p {
       color: @text;
+    }
+
+    /* Offline screen follow panel */
+
+    div[data-test-selector="follow-panel-overlay"] p {
+      color: @text !important;
+    }
+
+    div[data-test-selector="follow-panel-overlay"] button div {
+      color: @crust !important;
     }
 
     /* Front page warning sign */
